--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 version: '3.8'
 
 services:
-  rutracker-mcp:
+  playwright-filter:
     build: .
-    container_name: rutracker-mcp
+    container_name: playwright-filter
     restart: always
     ports:
       - '3012:3000'
